# donate-hub

./: .env  .gitignore  .vercelignore  admin_check.txt  app.py  check3.txt  check_clean.txt  check_final.txt  check_out.txt  check_output.txt  chkout.txt  index.py  lint_output.txt  package.json  pyproject.toml  requirements.txt  uv_tree.txt  uv_tree2.txt  verbose_check.txt  vercel.json  vercel_ls.txt
core/: admin.py  api_social.py  api_views.py  apps.py  urls.py  views.py
core/utils/: receipt_pdf.py
donatehub/: settings.py  urls.py
frontend/: eslint_report.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: api.js
frontend/src/components/: Navbar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AddDonation.jsx  AdminDashboard.jsx  DonationTracking.jsx  ForgotPassword.jsx  Login.jsx  MyDonations.jsx  Receipt.jsx  Register.jsx  ResetPassword.jsx  VerifyOTP.jsx
staticfiles/css/: auth.css
templates/: receipt.html
templates/admin/: receipt_pdf.html
templates/socialaccount/: authentication_error.html
