[project]
name = "donate-hub"
version = "0.1.0"
description = "DonateHub - A platform for connecting donors with causes."
requires-python = ">=3.12"
dependencies = [
    "django",
    "django-allauth",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "django-cors-headers",
    "python-dotenv",
    "psycopg2-binary",
    "google-generativeai",
    "xhtml2pdf>=0.2.14",
    "gunicorn",
    "whitenoise",
]

[tool.uv]
package = true

[project.scripts]
app = "donatehub.wsgi:application"

[tool.vercel]
# Optional Vercel settings if needed.
