[project]
name = "donate-hub"
version = "0.1.0"
description = "DonateHub - A platform for connecting donors with causes."
requires-python = ">=3.12"
dependencies = [
    "django",
    "django-allauth",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "django-cors-headers",
    "python-dotenv",
    "psycopg2-binary",
    "google-generativeai",
    "reportlab<4.3.0",
    "xhtml2pdf",
    "gunicorn",
    "whitenoise",
]

[project.scripts]
app = "donatehub.wsgi:application"

[tool.vercel]
# Optional Vercel settings if needed.
